<resources>
    <string name="app_name">Randomizer</string>
    <string name="tvHead">Randomizer</string>
    <string name="tvSubHead">This randomizer app allows you to pick a random number (or a random topic) to a person! Try it out now!</string>
    <string name="btnDisp">Randomize</string>
    <string name="btnView">VIEW</string>
    <string name="copyright">Copyright Cricketish 2020</string>
    <string name="Name_enter">Enter the Topic</string>
    <string name="submit">Submit</string>
</resources>
