<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/tvHead"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvDisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/tvSubHead"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/custom_btn"
        android:text="@string/btnDisp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="150dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/btnView"
        android:textColor="#74000000"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:textColor="#8A000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvDisp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="#45000000"
        android:textSize="14sp" />
</LinearLayout>